# geopip

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yml  Publish.yml
geopip/: __init__.py  _geo_fkt.py  _geojson.py  _geopip.py  _pure.py  _shapely.py  globe.geo.json
tests/: conftest.py  requirements.txt  sample.geo.json  test_geo_fkt.py  test_geo_fkt_bbox.py  test_geo_fkt_in_bbox.py  test_geopip.py  test_pure.py  test_shapely.py
