[tool.poetry]
name = "geopip"
version = "2.0"
description = "Reverse geocode a lng/lat coordinate within a geojson FeatureCollection."
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/tammoippen/geopip"
homepage = "https://github.com/tammoippen/geopip"

include = ["geopip/*.json", "geopip/*.py", "tests/*.json", "tests/*.py"]

keywords = ["geojson", "point in polygon", "reverse geocode", "countries"]

classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.7"

geohash-hilbert = "^1.2"
shapely = {version = "^2.0", optional = true, extras = ["vectorized"]}

[tool.poetry.dev-dependencies]

black = "*"
pytest = "^7"
pytest-cov = "*"
pytest-randomly = "*"
ruff = "*"

[tool.poetry.extras]
fast = ["shapely"]

[tool.ruff]
select = ["B", "BLE", "C", "E", "F", "PL", "Q", "RUF", "T", "W", "I"]
ignore = [ "E501"]

[tool.ruff.per-file-ignores]
"**/tests/*" = ["B011", "PLR2004"]

[tool.ruff.isort]
known-first-party = ["geopip"]
